# SpaceInvaders

./: CMakeLists.txt  README.md  bake_project.py  baker.py  cling.hpp  example.json  log  rebuild.sh  run.sh
controller/: controller.hpp
controller/sfml/: mm_sfmlcontroller.cpp  sfmlcontroller.cpp  sfmlcontroller.hpp
event/: event.hpp
exceptions/: exceptions.hpp
exec/: main.cpp
experiments/cchannel/: main.cpp
experiments/ccq/: ccq.cpp
experiments/channel/: channel_test  main.cpp
experiments/exp_input/: input_test  main.cpp
experiments/guard/: guard.cpp
experiments/rwlock/: rwlock.cpp
game/: game.cpp  game.hpp
libs/gtest/: CMakeLists.txt  bake_me.py
libs/yomm11/: CMakeLists.txt  CTestTestfile.cmake  yomm11-config.cmake  yomm11-config.cmake.in
model/: mm_model.cpp  model.cpp  model.hpp  model_state.hpp
model/entity/: entity.hpp  movement.hpp  player.hpp
specs/: Event.md  Game.html  Game.md  Model.md
specs/Model-related/: Dispatchers.md  Entity.md  World.md
src/: cling.hpp  example.json
src/controller/: controller.hpp
src/event/: event.hpp
src/exceptions/: exceptions.hpp
src/exec/: main.cpp
src/game/: game.cpp  game.hpp
src/model/: mm_model.cpp  model.cpp  model.hpp  model_state.cpp  model_state.hpp  model_state_test.cpp
src/specs/: Controller.md  Exceptions.md  Practical.md  Stopwatch.md  View.md
src/util/: util.cpp  util.hpp
src/view/: view.hpp
util/: util.cpp  util.hpp
util/cmd/: cmd.cpp
util/parser/: parser.cpp
util/periodical/: periodical.hpp
util/rwlock/: rwlock.cpp  rwlock.hpp
util/sleepable/: sleepable.cpp
util/stopwatch/: stopwatch.cpp  stopwatch.hpp
view/: view.hpp
view/sfml/: mm_sfmlview.cpp  sfmlresources.hpp  (+2 more)
viewcontroller/: viewcontroller.hpp
(+76 files in other folders)
